<p> clear. To avoid overlap of words over right aligned picture

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5614,7 +5614,7 @@ a.thumbnail:focus {
 }
 
 .media > .pull-right {
-  /* margin-left: 10px; */
+  margin-left: 10px;
 }
 
 .media-list {
